更新导航图标
更新导航图标圆角，暗夜模式图标互换，

--- a/main/components/navbar.html
+++ b/main/components/navbar.html
@@ -2,17 +2,17 @@
     <div class="container">
         <nav class="navbar">
             <div class="nav-left">
-                <a href="#" class="logo">
-                    <img src="../main/images/logo.png" alt="Linxzee Logo" class="logo-image">
-                    <span>Linxzee</span>
+                <a href="/index.html" class="logo">
+                    <img src="../main/images/logo.png" alt="Lzee Logo" class="logo-image">
+                    <span>Lzee</span>
                 </a>
             </div>
             
             <!-- 桌面端导航 -->
             <div class="nav-right desktop-nav">
                 <div class="nav-links">
-                    <a href="/">首页</a>
-                    <a href="/download.html">下载中心</a>
+                    <a href="/index.html">首页</a>
+                    <a href="/download.html">下载</a>
                     <a href="https://github.com/linxzee/phone-tool/" target="_blank" rel="noopener noreferrer">项目</a>
                 </div>
                 <div class="nav-divider"></div>
@@ -23,6 +23,7 @@
                     </button>
                     <a href="https://github.com/linxzee/phone-tool/" aria-label="GitHub" class="github-link" target="_blank" rel="noopener noreferrer">
                         <img src="../main/images/github-fill.svg" alt="GitHub" class="github-icon">
+                        <img src="../main/images/whitegithub.svg" alt="GitHub" class="github-icon">
                     </a>
                 </div>
             </div>
@@ -36,6 +37,7 @@
                     </button>
                     <a href="https://github.com/linxzee/phone-tool/" aria-label="GitHub" class="github-link" target="_blank" rel="noopener noreferrer">
                         <img src="../main/images/github-fill.svg" alt="GitHub" class="github-icon">
+                        <img src="../main/images/whitegithub.svg" alt="GitHub" class="github-icon">
                     </a>
                 </div>
                 <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="切换菜单">
