--- a/main/css/docs.css
+++ b/main/css/docs.css
@@ -32,7 +32,7 @@ img {
 }
 figure { margin: 25px 0; padding: 0; }
 figcaption {
-    text-align: center;
+    text-align: left;
     font-size: 0.9em;
     color: var(--subtle-text-color);
     margin-top: -10px;
