--- a/main/components/navbar-root.html
+++ b/main/components/navbar-root.html
@@ -3,7 +3,7 @@
         <nav class="navbar">
             <div class="nav-left">
                 <a href="/index.html" class="logo">
-                    <img src="main/images/logo.png" alt="Lzee Logo" class="logo-image">
+                    <img src="/main/images/logo.png" alt="Lzee Logo" class="logo-image">
                     <span>Lzee</span>
                 </a>
             </div>
@@ -18,12 +18,12 @@
                 <div class="nav-divider"></div>
                 <div class="nav-actions">
                     <button id="theme-toggle-btn" class="theme-toggle" title="切换主题">
-                        <img class="sun-icon" src="main/images/sun.svg" alt="亮色模式">
-                        <img class="moon-icon" src="main/images/moon.svg" alt="暗色模式">
+                        <img class="sun-icon" src="/main/images/sun.svg" alt="亮色模式">
+                        <img class="moon-icon" src="/main/images/moon.svg" alt="暗色模式">
                     </button>
                     <a href="https://github.com/linxzee/phone-tool/" aria-label="GitHub" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="main/images/github-fill.svg" alt="GitHub" class="github-icon">
-                        <img src="main/images/whitegithub.svg" alt="GitHub" class="github-icon">
+                        <img src="/main/images/github-fill.svg" alt="GitHub" class="github-icon">
+                        <img src="/main/images/whitegithub.svg" alt="GitHub" class="github-icon">
                     </a>
                 </div>
             </div>
@@ -32,12 +32,12 @@
             <div class="mobile-nav">
                 <div class="nav-actions">
                     <button id="theme-toggle-btn-mobile" class="theme-toggle" title="切换主题">
-                        <img class="sun-icon" src="main/images/sun.svg" alt="亮色模式">
-                        <img class="moon-icon" src="main/images/moon.svg" alt="暗色模式">
+                        <img class="sun-icon" src="/main/images/sun.svg" alt="亮色模式">
+                        <img class="moon-icon" src="/main/images/moon.svg" alt="暗色模式">
                     </button>
                     <a href="https://github.com/linxzee/phone-tool/" aria-label="GitHub" class="github-link" target="_blank" rel="noopener noreferrer">
-                        <img src="main/images/github-fill.svg" alt="GitHub" class="github-icon">
-                        <img src="main/images/whitegithub.svg" alt="GitHub" class="github-icon">
+                        <img src="/main/images/github-fill.svg" alt="GitHub" class="github-icon">
+                        <img src="/main/images/whitegithub.svg" alt="GitHub" class="github-icon">
                     </a>
                 </div>
                 <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="切换菜单">
